S12P11E104-611 사용자 튜토리얼 진행 여부에 따라 튜토리얼 화면에 띄우기, 발음 페이지 카메라 on/off 및 on/off 상태 유지(redux로 상태 관리)

--- a/fe/src/features/pronunciation/PronsFirst.css
+++ b/fe/src/features/pronunciation/PronsFirst.css
@@ -127,17 +127,16 @@
     text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3);
 }
 
-/* ✅ 설명 컨테이너 내부에 포롱이 배치 */
-.porong-wrapper {
+
+ .conversation-porong-wrapper {
     position: relative;
-    width: 100%; /* .description-container의 전체 너비 사용 */
+    width: 100%; 
 }
 
-/* ✅ 포롱이 위치 조정 */
-.porong-image {
+.conversation-porong-image {
     position: absolute;
-    bottom: -230px; /* 설명 박스 바깥쪽으로 살짝 내림 */
-    left: -280px;  /* 왼쪽으로 이동 */
+    bottom: -230px; 
+    left: -280px;  
     width: 550px;
     height: auto;
     z-index: 10;
@@ -152,11 +151,11 @@
     }
 
     /* ✅ 포롱이 크기 조절 */
-    .porong-image {
+    /* .porong-image {
         width: 450px;
         left: -180px;
         bottom: -200px;
-    }
+    } */
 
     /* ✅ 비디오 & 이미지 크기 줄이기 */
     .lips-video, .lip-image, .mouth-image {
