--- a/fe/src/features/auth/index.css
+++ b/fe/src/features/auth/index.css
@@ -29,7 +29,7 @@
 }
 
 /* 입력 그룹 */
-.input-group {
+.login-input-group {
     margin-bottom: 1vw;
     display: flex;
     flex-direction: column;
@@ -47,7 +47,7 @@
 }
 
 /* ✅ 입력 필드 크기 유지 */
-.input {
+.login-input {
     width: 100%; /* 📌 부모 요소에 맞게 조절 */
     padding: 22px;
     font-size: 16px;
