--- a/fe/src/features/pronunciation/PronsSecond.css
+++ b/fe/src/features/pronunciation/PronsSecond.css
@@ -206,22 +206,7 @@
     filter: brightness(1.2); /* 밝게 처리 */
     transition: all 0.3s ease-in-out;
   }
-  
-  /* ✅ 일반적인 버튼 스타일 */
-  .prons-tutorial-box button {
-    background-color: #3da9fc;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    font-size: 16px;
-    border-radius: 5px;
-    cursor: pointer;
-    margin-top: 10px;
-  }
-  
-  .prons-tutorial-box button:hover {
-    background-color: #2c89e5;
-  }
+
   
   /* ✅ 특정 UI 요소 강조 */
   .image-top.highlight,
@@ -259,3 +244,73 @@
   }
   
 
+.porong-container {
+    position: absolute;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 520px;
+    z-index: 300;
+    font-family: Pretendard;
+  }
+  
+  .porong-image {
+    width: 120px;
+  }
+  
+  .porong-speech-bubble {
+    background: #fff8dc;
+    padding: 17px 20px;
+    border-radius: 10px;
+    border: 2px solid #f4a261;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+    text-align: center;
+    font-size: 20px;
+    margin-top: 5px;
+    font-weight: 600;
+  }
+  
+  /* ✅ 포롱이 위치별 스타일링 */
+  .porong-container.center {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  
+  
+  .porong-container.near-record {
+    bottom: 20%;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  
+  .porong-container.above-record {
+    bottom: 30%;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  
+  .porong-container.near-result {
+    bottom: 20%;
+    right: 30%;
+  }
+  
+  .porong-container.near-next {
+    bottom: 10%;
+    right: 2%;
+  }
+
+  .porong-nextbutton {
+    background-color: #f9ba87;
+    border: none;
+    border-radius: 10%;
+    margin-top: 7%;
+    font-family: Pretendard;
+    padding: 5px;
+  }
+
+  .camera-button {
+    border: none;
+    background-color: white;
+
+  }
