--- a/fe/src/features/pronunciation/PronsSecond.css
+++ b/fe/src/features/pronunciation/PronsSecond.css
@@ -303,14 +303,34 @@
   .porong-nextbutton {
     background-color: #f9ba87;
     border: none;
-    border-radius: 10%;
+    border-radius: 20%;
     margin-top: 7%;
     font-family: Pretendard;
-    padding: 5px;
+    font-weight: 700;
+    padding: 5px 10px;
   }
 
   .camera-button {
     border: none;
     background-color: white;
 
+  }
+
+  .restart-tutorial-btn {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    background-color: darkorange;
+    color: rgb(245, 243, 241);
+    border: none;
+    padding: 7px 10px;
+    font-size: 12px;
+    border-radius: 10px;
+    cursor: pointer;
+    font-weight: bold;
+    transition: 0.3s;
+  }
+  
+  .restart-tutorial-btn:hover {
+    background-color: rgba(253, 152, 28, 0.777);
   }
