S12P11E104-590 Design: 메인페이지 카드 그림 크기 변경, 발음 익히기 카드 반응형 변경, 발음 및 AI 튜토리얼 완성, 폰트 변경, 발음 연습 페이지 배경 변경, AI 대화 시작 시 위치변경, 녹음 버튼 위 안내 문구 추가

--- a/fe/src/features/mainpage/Main.css
+++ b/fe/src/features/mainpage/Main.css
@@ -73,17 +73,17 @@
 }
 
 .card-content h2 {
-    font-size: 2rem;
+    font-size: 2.4rem;
     color: white;
     margin-bottom: 10px;
-    font-family: 'NPSbold'; 
+    font-family: 'SDSamliphopang'; 
 }
 
 .card-content p {
-    font-size: 1.2em;
+    font-size: 1.5em;
     color: rgb(247, 247, 247);
     line-height: 1.5;
-    font-family: 'NPSregular';
+    font-family: 'SDSamliphopang';
 }
 
 /* 카드 이미지 스타일 */
@@ -100,12 +100,12 @@
 
 /* 개별 이미지 조정 */
 .single-image {
-    width: 50vw;
+    width: 580px;
 }
 
 .multi-image {
     margin-right: 10%;
-    width: 50vw;
+    width: 580px;
     bottom: -2px;
 }
 
