--- a/fe/src/features/pronunciation/PronsResult.css
+++ b/fe/src/features/pronunciation/PronsResult.css
@@ -180,11 +180,13 @@
 
 .retry-button {
     background-color: #4da6ff;
+    font-family: Prentendard;
     color: white;
 }
 
 .end-button {
     background-color: #ff7675;
+    font-family: Prentendard;
     color: white;
 }
 
