S12P11E104-633 Fix : 프로필 배경 추가

--- a/fe/src/features/user/Profile.css
+++ b/fe/src/features/user/Profile.css
@@ -3,9 +3,13 @@
     display: flex;
     width: 100vw;
     height: 100vh;
-    background-color: #ffe0b1;
-    overflow-y: auto;
+    /* background-color: #ffe0b1; */
+    background-size: cover;
+    background-attachment: fixed;
+    overflow: hidden;
   }
+
+
 
 .childname {
     text-align: center;
