S12P11E104-623 Feat: 방장 username, 방장 ID, 인원 수 항목 추가

--- a/fe/src/features/room/WaitingRoom.css
+++ b/fe/src/features/room/WaitingRoom.css
@@ -119,3 +119,9 @@
     margin-top: 2rem;
     text-align: center;
 }
+
+/*방장 아이디 표시*/
+.small-text {
+    font-size: 0.8em; /* 글씨 크기 줄이기 */
+    color: gray; /* 색상 약간 연하게 */
+}
