--- a/fe/src/features/user/ProfileInfo.css
+++ b/fe/src/features/user/ProfileInfo.css
@@ -3,9 +3,10 @@
     margin: auto;
     padding: 20px;
     text-align: center;
+    
 }
 
-.info-box {
+/* .info-box {
     margin-bottom: 15px;
 }
 
@@ -48,7 +49,77 @@
    cursor: pointer;
    padding: 10px 5px;
    margin: 1px;
+} */
+
+.profile-content {
+    background: rgba(255, 255, 255, 0.8); /* 반투명 배경 */
+    border-radius: 30px;
+    border: 2px solid rgba(255, 255, 255, 0.5);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    max-width: 500px;
+    width: 50vw;
+    margin: 20px 10px 50px 20px;
+    font-family: NPSbold;
+    /* text-align: center; */
 }
+
+.info-box {
+    display: flex;
+    flex-direction: column;
+    /* font-size: 20px; */
+    /* align-items: center; */
+    margin-bottom: 15px;
+}
+
+.info-box label {
+    font-weight: bold;
+    font-family: NPSregular;
+    margin-bottom: 15px;
+}
+
+.info-box input {
+    width: 90%;
+    padding: 12px;
+    margin-bottom: 10px;
+    font-size: 16px;
+    border: none;
+    border-radius: 5px;
+    font-family: NPSregular;
+}
+
+.profile-button {
+    background: #78b87a;
+    color: white;
+    border: none;
+    padding: 10px;
+    border-radius: 5px;
+    cursor: pointer;
+    margin-top: 10px;
+    font-family: NPSregular;
+    margin-bottom: 20px;
+    width: 20vw !important;
+}
+
+.profile-button:hover {
+    background: #3bb83f;
+}
+
+.my-profile-image {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    overflow: hidden;
+    cursor: pointer;
+    border: 3px solid #fff;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+  }
+  
+  .my-profile-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
 
 @media screen and (max-width: 1024px) {
     .profile-container {
@@ -83,16 +154,15 @@
     .info-box input {
         width: 90%;
         font-size: 14px;
-        padding: 8px;
+        padding: 12px;
     }
 
     .profile-button {
         width: 90%;
         font-size: 14px;
-        padding: 8px;
+        padding: 10px;
     }
 
-    .change-password-btn,
     .delete-account-btn {
         width: 90%;
         font-size: 14px;
@@ -115,8 +185,7 @@
         font-size: 12px;
         padding: 6px;
     }
-
-    .change-password-btn,
+    
     .delete-account-btn {
         font-size: 12px;
         padding: 8px;
