S12P11E104-590 Design: CSS 수정

--- a/fe/src/features/pronunciation/PronsResult.css
+++ b/fe/src/features/pronunciation/PronsResult.css
@@ -179,14 +179,14 @@
 }
 
 .retry-button {
-    background-color: #4da6ff;
-    font-family: Prentendard;
+    background-color: #66b0fa;
+    font-family: NPSregular;
     color: white;
 }
 
 .end-button {
-    background-color: #ff7675;
-    font-family: Prentendard;
+    background-color: #fd7f7f;
+    font-family: NPSregular;
     color: white;
 }
 
