--- a/fe/src/features/room/Webrtc.css
+++ b/fe/src/features/room/Webrtc.css
@@ -295,17 +295,20 @@
   width: 25%;
   min-width: 25%;
   min-height: 50vh;
+  max-height: 50vh;
   padding: 1rem;
   background: rgba(223, 207, 207, 0.7);
   border-radius: 1rem;
   border: 0.2rem solid rgba(192, 168, 168, 0.5);
   color: #4a3f3f;
+  overflow: hidden;
 }
 
 .chat-box {
   flex: 1;
   width: 90%;
   height: 70%;
+  max-height: 70%;
   overflow-y: auto;
   background: #ffffff;
   padding: 1.2rem;
