--- a/fe/src/features/user/ProfileInfo.css
+++ b/fe/src/features/user/ProfileInfo.css
@@ -3,7 +3,6 @@
     margin: auto;
     padding: 20px;
     text-align: center;
-    
 }
 
 /* .info-box {
@@ -113,13 +112,13 @@
     cursor: pointer;
     border: 3px solid #fff;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
-  }
-  
-  .my-profile-image img {
+}
+
+.my-profile-image img {
     width: 100%;
     height: 100%;
     object-fit: cover;
-  }
+}
 
 @media screen and (max-width: 1024px) {
     .profile-container {
@@ -146,6 +145,10 @@
         padding: 10px;
         font-size: 14px;
         text-align: center;
+    }
+    .profile-menu li.disabled {
+        pointer-events: none;
+        color: gray;
     }
 }
 
@@ -185,7 +188,7 @@
         font-size: 12px;
         padding: 6px;
     }
-    
+
     .delete-account-btn {
         font-size: 12px;
         padding: 8px;
