--- a/fe/src/features/room/Webrtc.css
+++ b/fe/src/features/room/Webrtc.css
@@ -541,6 +541,37 @@
     margin: 1rem;
 }
 
+.popup-alert {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(0, 0, 0, 0.8);
+    color: #fff;
+    padding: 1rem 2rem;
+    border-radius: 1rem;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    z-index: 9999;
+    animation: fadeInOut 2s ease-in-out;
+    text-align: center;
+    font-size: 1.2rem;
+}
+
+@keyframes fadeInOut {
+    0% {
+        opacity: 0;
+    }
+    10% {
+        opacity: 1;
+    }
+    90% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+    }
+}
+
 /* =============== 1024px 이하 (태블릿 및 중간 크기 화면) =============== */
 @media (max-width: 1024px) {
     /* 전체 컨테이너의 여백 조정 */
